labs/09-Service_mesh/microservices-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microservices-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservices
spec:
  hosts:
  - "*"
  gateways:
  - microservices-gateway
  http:
  - match:
#    - uri:
#        exact: /productpage
#    - uri:
#        prefix: /static
#    - uri:
#        exact: /login
#    - uri:
#        exact: /logout
    - uri:
        prefix: /customers-service/v2/customers
    route:
    - destination:
        host: customer-service
        port:
          number: 8102
  - match:
    - uri:
        prefix: /orders-service/v2/orders
    route:
    - destination:
        host: order-service
        port:
          number: 8103
